--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,21 @@ a.active {
   
 }
 
-.card{
+/* .card{
   clip-path : path('M 10,20 L 60,20 A 10,10 0,0,0 70,10 L 70,10 A 10,10 0,0,1 80,0 L 140,0 A 10,10 0,0,1 150,10 L 150,190 A 10,10 0,0,1 140,200 L 10,200 A 10,10 0,0,1 0,190 L 0,30 A 10,10 0,0,1 10,20 Z')
+} */
+
+@theme{
+  --animate-wiggle :wiggle 0.5s ease-in-out infinite;
+  @keyframes wiggle{
+    0%{
+      transform: rotate(-5deg);
+    }
+    50%{
+      transform: rotate(5deg);
+    }
+    100%{
+      transform: rotate(-5deg);
+    }
+  }
 }
